# precice-pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
check_image_prefix/: check_image_prefix.py
format_precice_config/: format_precice_config.py
