[metadata]
name = precice_pre_commit_hooks
version = 2.1
description = Some preCICE-specific hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/precice/precice-pre-commit-hooks
author = Frédéric Simonis
author_email = simonis@in.tum.de
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = format_precice_config
python_requires = >=3.7
install_requires =
    lxml

[options.entry_points]
console_scripts =
    format-precice-config = format_precice_config.format_precice_config:main
